--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block styles %}
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/create-point.css">
     <link rel="stylesheet" href="/styles/modal.css">
 
