--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block styles %}
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/search-results.css">
 
 {% endblock styles %}
