--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,7 @@
 
 :root {
-    --title-color: #322153;
-    --primary-color: #34cb79;
+    --title-color: #1D2954;/*#002F87;*/
+    --primary-color: #00ae87;
 }
 
 * {
