--- a/src/views/partials/page-header.html
+++ b/src/views/partials/page-header.html
@@ -1,5 +1,8 @@
 <header>
-    <img src="/assets/logo.svg" alt="Logomarca">
+    <picture>
+        <source media="(max-width: 1050px)" srcset="/assets/logo01.svg" type="image/svg+xml">
+        <img src="/assets/logo-nome.svg" alt="Logomarca">
+    </picture>
 
     <a href="/">
         <span></span>
