--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,11 +1,10 @@
 {% extends "partials/layout.html" %}
 
 {% set pageId = "page-home" %}
-
-<title>Ecoleta</title>
-
-{% block styles %}
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Bioleta</title>
+
+{% block styles %}    
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/modal.css">
 
@@ -17,7 +16,7 @@
     <div class="content">
         <header>
             <picture>
-                <source media="(max-width: 905px)" srcset="/assets/logo.svg" type="image/svg">
+                <source media="(max-width: 1050px)" srcset="/assets/logo01.svg" type="image/svg+xml">
                 <img src="/assets/logo-nome.svg" alt="Logomarca">
             </picture>
             <a href="create-point">
