--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -3,7 +3,7 @@
 {% set pageId = "page-create-point" %}
 
 {% block title %}
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../../public/assets/logo-nome.svg" type="image/x-icon">
     <title>Criar um ponto de coleta</title>
 {% endblock title %}
 
@@ -116,7 +116,9 @@
 
         </fieldset>
 
-        <button type="submit">Cadastrar ponto de coleta</button>
+        <div class="btn">
+            <button type="submit">Cadastrar ponto de coleta</button>
+        </div>
 
     </form>
 
