--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,11 +13,14 @@
 
 html {
     font-family: Roboto, sans-serif;
+    overflow-x: hidden;
 }
 
 body {
+    overflow-x: hidden;
+
     background: #f0f0f5;
-    -webkit-font-smoothing: antialiased;
+    /* -webkit-font-smoothing: antialiased; */
 }
 
 a {
